src/livecodes/styles/app.scss
/* ... */
#tools-pane-bar {
  font-size: var(--s12);
  height: var(--toolspane-bar-height);
  justify-content: space-between;
  padding: 1px 0; // fix bottom space
}

#tools-pane-titles {
  display: flex;
  height: var(--toolspane-bar-height);
  justify-content: flex-start;
}

a.tools-pane-title {
  align-items: center;
  background-color: var(--toolspane-bg-color);
  border-bottom: var(--toolspane-border);
  color: var(--toolspane-color);
  cursor: pointer;
  display: flex;
  justify-content: center;
  padding: 0 var(--s8);
  position: relative;

  &:hover,
  &.active {
    background-color: var(--toolspane-bg-active);
    border-bottom: var(--toolspane-border-active);
    color: var(--toolspane-active);
  }
}

#tools-pane-buttons {
  align-items: center;
  display: inherit;
  text-align: right;
  white-space: nowrap;

  > div {
    white-space: nowrap;
  }
}

#tools-pane > div {
  display: flex;
  flex-direction: column;
  height: 0;
  visibility: hidden;

  /* (display: none) disables console logs when inactive */
  &.active {
    height: 100%;
    visibility: visible;
  }
}

#console {
  overflow: auto;

  .luna-object-viewer {
    overflow: hidden;
  }

  .luna-console-input pre.luna-console-code {
    visibility: hidden;

    &.visible {
      visibility: visible;
    }
  }

  .luna-console-log-item .luna-console-icon-container .luna-console-icon {
    color: #03a9f4;
  }

  .luna-console-count {
    color: #fff;
  }
}

#console-input-indicator {
  color: var(--toolspane-accent-color);
  padding-top: 2px;
}

#compiled-code {
  height: 100%;
  margin: 0;
  padding: 0;
  width: 100%;
}

#test-container,
#test-results {
  background-color: var(--tests-bg-color);
  color: var(--tests-color);
}

#test-results {
  padding-bottom: 1rem;

  .test-result {
    background-color: var(--test-results-bg-color);
    border: var(--test-results-border);
    border-radius: var(--rs);
    margin: 0.5em;
    padding: 0.5em;
    padding-left: 3em;

    &::before {
      content: '🧪';
      display: inline-block;
      margin-left: -2em;
      margin-right: 0.5em;
      width: 1.5em;
    }

    &.fail {
      background-color: var(--test-fail-background);
      border: var(--test-fail-border);
      color: var(--test-fail-color);

      &::before {
        content: '✖';
      }
    }

    &.pass {
      color: var(--test-pass-color);

      &::before {
        content: '✔';
      }
    }

    &.skip::before {
      content: '○';
    }
  }

  .test-error {
    margin-left: 1em;
    margin-top: 0.5em;
  }

  .test-summary,
  .no-tests {
    margin: 0.5em;
    min-height: 2.5em;
    padding: 0.5em;

    .fail {
      color: var(--test-fail-color);
    }

    .pass {
      color: var(--test-pass-color);
    }
  }
}

#test-container {
  .buttons {
    justify-content: space-evenly;
    margin: var(--s8);
  }

  .button {
    gap: var(--s4);
    min-width: 80px;
  }
}

#watch-tests-btn {
  .checked {
    display: unset;
  }

  .unchecked {
    display: none;
  }

  &.disabled {
    .checked {
      display: none;
    }

    .unchecked {
      color: var(--link);
      display: unset;
    }
  }
}

.gutter {
  align-items: center;
  background-color: var(--gutter-split-bg-color);
  color: var(--link);
  display: flex !important;
  justify-content: center;
  position: relative;

  &.gutter-vertical {
    cursor: ns-resize;
  }

  &.gutter-horizontal {
    cursor: ew-resize;
  }

  #handle {
    background-color: var(--gutter-split-bg-handle);
    border-radius: var(--rs);
    height: 30px;
    width: 4px;
  }
}

#editor-container .gutter #size-label {
  background-color: var(--size-label-background);
  border: 1px solid var(--size-label-border);
  border-radius: var(--rs);
  color: var(--size-label-color);
  cursor: auto;
  font-family: system-ui, sans-serif;
  font-size: var(--s12);
  left: 15px !important;
  max-height: calc(100vh - var(--toolbar-height));
  opacity: 0;
  padding: 2px;
  position: absolute;
  top: 5px !important;
  transition: opacity 0.1s;
  white-space: nowrap;
  z-index: 10;

  &.visible {
    opacity: 100%;
    transition: opacity 0.1s;
  }
}

#select-editor {
  color: var(--editor-title-color);
  height: calc(var(--toolbar-height) - var(--s6));
  margin: 0 0 calc(-1 * var(--s2)) var(--s8);
  position: relative;

  > ul {
    display: flex;
    height: 100%;
  }
}
/* ... */

